[package]
name = "bybit_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
hex = "0.4.3"
http = "1.3.1"
ring = "0.17.14"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_qs = "0.15.0"
thiserror = "2.0.12"
